change: from "bar" to "scatter"

--- a/scatterplot.html
+++ b/scatterplot.html
@@ -8,7 +8,7 @@
      var data = [{
       x: ['Company X', 'Company Y', 'Company Z'],
       y: [200, 140, 230],
-      type: 'bar'
+      type: 'scatter'
     }];
     Plotly.newPlot('myDiv', data);
    </script>
